# glogDemo

./: .gitignore  CMakeLists.txt  Distrib.bat  README.md
Src/: CMakeLists.txt  Main.cpp
